
--Escaped family members now return to house after robber suicide instead of
  leaving for good (thanks Largestherb).

--Fixed so that encryption key used for robbery house maps does not break when
  playing back recordedGame files (thanks Christian Stritzelberger).

--Added a Move Half button to the backpack screen that parallels the behavior
  of the Sell Half button (thanks Matrix).





Version 9  Live Server Fixes

--Houses still earn salary if wife living, some money left in house, or one of
  last two consecutive robberies was not successful.

--In admin mode, tape name search now matches against both robber and victim.

--Houses that have reached 0 in value are now removed from the house list until
  they either earn money or are edited by their owners.  This prevents dumping
  tools in a wrecked house repeatedly across lives and also mitigates senseless
  vandalism.  Also fixed a bug where a not-robbable house could be robbed on
  the server through a hacked client, even when it was not being shown on the
  house list.

--Experimenting with paying viable houses salary every 10 minutes instead of
  every hour (to make game more lively and quicker).

--Added indexes to all columns used in WHERE and ORDER BY columns, preventing
  queries from needing to unnecessarily examine every row in a table.

--Added a hash-based map cach so that house maps aren't duplicated throughout
  various database tables (for example, a series of robbery tapes that all have
  the same starting map state) to dramatically reduce the amount of database
  storage space used by maps and robbery tapes.  Total space used dropped from
  86 KiB per user down to 20 KiB per user

--Cut 10-minute salaries in half to slow things down (you and your spouse earn
  $70 and $140 every 10 minutes).

--Backpacks are now force-returned to vaults upon viewing a tape or after 5
  minutes of no owner game activity.  Thus, backpacks can only be used for